[package]
name = "token-handler"
version = "0.1.0-SNAPSHOT"
authors = ["Liv Fischer <liv.fischer@senacor.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = { version = "4", default-features = false, features = ["macros", "cookies"] }
aes-gcm = { version = "0.10", features = [ "std" ] }
base64 = "0.21"
brotli = "3"
chrono = "0.4"
clap = { version = "4" , features = [ "derive" ] }
derive_more = "0.99"
env_logger = "0.10"
futures-util = "0.3"
hcl-rs = "0.16"
itertools = "0.12"
log = "0.4"
mime = "0.3"
nanoid = "0.4"
rand = "0.8"
regex = "1.10.2"
reqwest = { version = "0.11", default-features = false, features = [ "json", "native-tls", "stream" ] }
rmp-serde = "1"
serde = { version = "1", features = [ "rc" ] }
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
tokio = { version = "1.34", features = [ "sync" ] }
tokio-stream = "0.1.14"
url = { version = "2.5", features = [ "serde" ] }
